--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <script src="teclado-auxiliar-integrado.js"></script>
             ...
 </head>
-	<body style="background-color:#385c24;">    
+	<body style="background-color:#3b5998;">    
 
 <body>
 
