--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <script src="teclado-auxiliar-integrado.js"></script>
             ...
 </head>
-	<body style="background-color:#000000;">    
+	<body style="background-color: #e30052;">    
 
 <body>
 
